<resources>
    <string name="app_name">MyOrganizations - DeadLockID</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="refresh">Refresh</string>
    <string name="send_feedback">Send feedback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="join">Join</string>
    <string name="organizations">Organizations</string>
    <string name="full_name">Full Name</string>
    <string name="username_domain_com">username@domain.com</string>
    <string name="unenroll">Unenroll</string>
    <string name="msg_add_org">You will create a group for your organization, the group will help you to manage informatics system of your organization.
        \n\nThere are two types of group, \n
         1. Group with Division feature, \n
         2. Group with Non-Division feature.\n
        \nGroup features :
        \n - Archives Files,
        \n - Documents,
        \n - Gallery,
        \n - Message,
        \n - Notes Schedule,
        \n - Etc.\n\n

        Input your group information to create :\n

    </string>
    <string name="terms">I agree with terms and privacy policies to create a new group. <u>Learn more.</u></string>
    <string name="join_text">You will send a request to join the organization. Please enter the token code from the organization to join.</string>
    <string name="text_scanQRCode"><b>Update</b> : You can scan QR Code to request join.</string>
    <string name="title_activity_organization">activity_organization</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="my_request">My Request</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
