<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_join"
        android:title="@string/join"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_requested"
        android:title="@string/my_request"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_notif"
        android:title="@string/notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_send"
        android:orderInCategory="100"
        android:title="@string/send_feedback"
        android:visible="false"
        app:showAsAction="never" />
</menu>
