<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fb="http://schemas.android.com/tools"
    android:id="@+id/layout_account_full"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="DeadLockID"
                android:textColor="#FF5722"
                android:textSize="24sp" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/currentAccountLogin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_account_circle_black_24dp"
                android:contentDescription="@string/nav_header_desc"
                android:visibility="gone"
                app:roundAsCircle="true"
                fb:roundAsCircle="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="55dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/namatext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/source_sanspro_regular"
                    android:singleLine="true"
                    android:text="@string/full_name"
                    android:textColor="@color/black_60_transparent"
                    android:textSize="22sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/emailtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-3dp"
                    android:fontFamily="@font/source_sanspro_regular"
                    android:singleLine="true"
                    android:text="@string/username_domain_com"
                    android:textColor="@color/black_60_transparent"
                    android:textSize="12sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
